--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
   <div class="flex-column justify-space-around">
     <header class="header display-flex justify-space-between align-center p-2">
       <h1>
-        <a href="/">Name of App Here</a>
+        <a href="/">Touristy</a>
       </h1>
    
  
