moved html code to handlebars files

--- a/views/blogDashboard.handlebars
+++ b/views/blogDashboard.handlebars
@@ -1,19 +1,10 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Touristy</title>
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-     <header>
+    <header>
         <h3>Follow Blog</h3>
      </header>
-     <section>
+     <!-- <section>
         <img>
      </section>
+      -->
       <section>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec aliquam massa. 
         Cras quis augue fringilla, malesuada elit vel, tincidunt tortor. Aliquam tristique 
@@ -32,6 +23,3 @@
             <li><a href="#">Github</a></li>
         </ul>
       </footer>
-</body>
-
-</html> -->
