--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,17 +1,29 @@
-<nav>
-        <header>
-          <h1>
-            <a href="/">Touristy</a>
-          </h1>
-          
-          <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Bio</a></li>
-              <li><a href="#">Log Out</a></li>
-          </ul>
-      </nav>
-  <section>
-    <div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Touristy</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+  <header>
+    <h1>Touristy</h1>
+    <nav>
+      <a href="/">Home</a>
+      {{!-- don't have a bio route yet, will add later --}}
+      <a href="#">Bio</a>
+      {{#if loggedIn}}
+      <button id="logout" class="btn-no-style">Logout</button>
+      {{else}}
+      <a href="/login">Login</a>
+      {{/if}}
+    </nav>
+
+    <section>
+      <div>
         <div id="ListOfBlogsHeader">
           <h1>List of Blogs</h1>
         </div>
@@ -22,5 +34,11 @@
             <li>Blog 3</li>
           </ul>
         </div>
-    </div>
-  </section>
+      </div>
+    </section>
+
+    {{#if loggedIn}}
+    <script src="/js/logout.js"></script>
+</body>
+
+</html>
