added trip routes by id to dashboard.handlebars file

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -29,9 +29,9 @@
         </div>
         <div id="blogs">
           <ul>
-            <li>Blog 1</li>
-            <li>Blog 2</li>
-            <li>Blog 3</li>
+            <li><a href="/trip/:id">Blog 1</li></a>
+            <li><a href="/trip/:id"></a>Blog 2</li></a>
+            <li><a href="/trip/:id"></a>Blog 3</li></a>
           </ul>
         </div>
       </div>
