--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,9 +12,8 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="header display-flex justify-space-between align-center p-2">
-      <h1>
-        <a href="/">Touristy</a>
-      </h1>
+      <h1>Touristy</h1>
+      {{{ body }}}
    
  
 </body>
