tutor helped me get paths working, link to correct path for JS, and add the path in server file

--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -1,4 +1,4 @@
-    <section> 
+    {{!-- <section> 
         <img>
     </section>
 
@@ -20,4 +20,6 @@
 
     <section> 
         <img>
-    </section>
+    </section> --}}
+
+    <h1>image page</h1>
