--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,21 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="header display-flex justify-space-between align-center p-2">
-      <h1>Touristy</h1>
+      <nav> 
+        <h1>Touristy</h1>
+        <a href="/">Home</a>
+        {{!-- don't have a bio route yet, will add later --}}
+        <a href="#">Bio</a>
+        <a href="/image">Image Gallery</a>
+        <a href="/post">Posts</a>
+        {{#if logged_in}}
+        <button id="logout" class="btn-no-style">Logout</button>
+        {{else}}
+        <a href="/login">Login</a>
+        {{/if}}
+      </nav>
+     
+    
       {{{ body }}}
    
  
