--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,8 @@
       <nav> 
         <h1>Touristy</h1>
         <a href="/">Home</a>
-        {{!-- don't have a bio route yet, will add later --}}
-        <a href="#">Bio</a>
+        {{!-- don't have a profile route yet, will add later --}}
+        <a href="#">Profile</a>
         <a href="/image">Image Gallery</a>
         <a href="/post">Posts</a>
         {{#if logged_in}}
@@ -26,7 +26,6 @@
         {{/if}}
       </nav>
      
-    
       {{{ body }}}
    
  
