--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Touristy</title>
-  <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -16,13 +15,13 @@
         <h1>Touristy</h1>
         <a href="/">Home</a>
         {{!-- don't have a bio route yet, will add later --}}
-        <a href="#">Bio</a>
-        <a href="/image">Image Gallery</a>
-        <a href="/post">Posts</a>
+        {{!-- <a href="#">Bio</a> --}}
+        {{!-- <a href="/image">Image Gallery</a>
+        <a href="/post">Posts</a> --}}
         {{#if logged_in}}
         <button id="logout" class="btn-no-style">Logout</button>
         {{else}}
-        <a href="/login">Login</a>
+        {{!-- <a href="/login">Login</a> --}}
         {{/if}}
       </nav>
      
