--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Touristy</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <div class="flex-column justify-space-around">
     <header class="header display-flex justify-space-between align-center p-2">
-      <nav> 
+      <nav>
         <h1>Touristy</h1>
         <a href="/">Home</a>
       Walker
@@ -21,7 +22,7 @@
         <a href="/post">Posts</a> --}}
 =======
         {{!-- don't have a profile route yet, will add later --}}
-        <a href="#">Profile</a>
+        <a href="/profile">Profile</a>
         <a href="/image">Image Gallery</a>
         <a href="/post">Posts</a>
       main
@@ -31,10 +32,14 @@
         {{!-- <a href="/login">Login</a> --}}
         {{/if}}
       </nav>
-     
-      {{{ body }}}
-   
- 
-</body>
+      </header>
 
+      {{{ body }}}
+
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+        
+</body>
 </html>
