--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -5,16 +5,17 @@
         <img>
      </section>
       -->
-      <section>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec aliquam massa. 
-        Cras quis augue fringilla, malesuada elit vel, tincidunt tortor. Aliquam tristique 
-        rhoncus felis, non efficitur arcu hendrerit nec. Phasellus eget lacus et mauris blandit 
-        euismod sit amet vitae tellus. Suspendisse commodo tristique ullamcorper. Cras quis 
-        cursus risus, viverra molestie ex. Suspendisse efficitur nec elit in accumsan. Phasellus 
-        cursus metus at nisi dignissim facilisis. Nulla euismod pellentesque odio ut eleifend. 
-        Praesent vitae tempor velit. Praesent sit amet vulputate nisi.
-      </section>
-
+      <main>
+        <section>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec aliquam massa. 
+          Cras quis augue fringilla, malesuada elit vel, tincidunt tortor. Aliquam tristique 
+          rhoncus felis, non efficitur arcu hendrerit nec. Phasellus eget lacus et mauris blandit 
+          euismod sit amet vitae tellus. Suspendisse commodo tristique ullamcorper. Cras quis 
+          cursus risus, viverra molestie ex. Suspendisse efficitur nec elit in accumsan. Phasellus 
+          cursus metus at nisi dignissim facilisis. Nulla euismod pellentesque odio ut eleifend. 
+          Praesent vitae tempor velit. Praesent sit amet vulputate nisi.
+        </section>
+      </main>
       <footer>
         <ul>
             <li><a href="#">Github</a></li>
