draft API Connection

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,8 +3,12 @@
      </header>
      <!-- <section>
         <img>
-     </section>
-      -->
+     </section> 
+     
+     -->
+    <!--map image -->
+     <div id="map"></div> 
+     
       <section>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec aliquam massa. 
         Cras quis augue fringilla, malesuada elit vel, tincidunt tortor. Aliquam tristique 
@@ -23,3 +27,5 @@
             <li><a href="#">Github</a></li>
         </ul>
       </footer>
+
+      <script src="loader.js"></script>
