--- a/public/css/style.css
+++ b/public/css/style.css
@@ -157,4 +157,15 @@ h2 {
   .btn {
     width: auto;
   }
+
+ 
+  #map {
+    height: 100%;
+  }
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
 }
