deleted username from user routes. Created trip model. Trouebleshooting routes and models

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@ nav h1 {
 nav a {
   display: flex;
   justify-content: flex-end;
-  color: var(--light-green);
+  color: var(--white);
   margin: 10px 0;
   text-decoration: none;
 }
