--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -1,31 +1,7 @@
 <section class="gallery-container">
     <h1>Gallery</h1>
     <section id="images">
-        {{!-- {{#each images as |galleryImages|}}
-        {{> gallery-images}}
-        {{/each}} --}}
-
-        {{!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/burger.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/camera.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/dog.jpg" alt="Third slide">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div> --}}
+       
         <div id="carouselExample" class="carousel slide" data-bs-interval="false">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="false">
@@ -72,7 +48,7 @@
 
     </section>
 </section>
-
+<script src="/js/logout.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/index.js"></script>
