--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,12 +21,14 @@
         {{#if logged_in}}
         <button id="logout" class="btn-no-style">Logout</button>
         {{else}}
-        {{!-- <a href="/login">Login</a> --}}
+        <a href="/login">Login</a>
         {{/if}}
       </nav>
       </header>
 
       {{{ body }}}
+
+<script src="/js/logout.js"></script>
 
       <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
