--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+{{!-- login form --}}
 <div class="row">
   <div class="col-md-6">
     <h2>Login</h2>
@@ -16,14 +17,11 @@
       </div>
     </form>
   </div>
+
+{{!-- sign up form --}}
 <div class="col-md-6">
   <h2>Signup</h2>
-
   <form class="form signup-form">
-    <div class="form-group">
-      <label for="name-signup">name:</label>
-      <input class="form-input" type="text" id="name-signup" />
-    </div>
     <div class="form-group">
       <label for="email-signup">email:</label>
       <input class="form-input" type="text" id="email-signup" />
