--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -13,8 +13,8 @@
       </div>
     </section>
 
-    {{#if loggedIn}}
-    <script src="/js/logout.js"></script>
+    {{!-- {{#if loggedIn}}
+    <script src="/js/logout.js"></script> --}}
 </body>
 
 </html>
