--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,137 +1,107 @@
-    <header>
-        <h3>Follow Blog</h3>
-     </header>
-     <!-- <section>
-        <img>
+header>
+<h3>Follow Blog</h3>
+</header>
+<!-- <section>
+       <img>
+    </section>
+     -->
+<main>
+  <section>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec aliquam massa.
+    Cras quis augue fringilla, malesuada elit vel, tincidunt tortor. Aliquam tristique
+    rhoncus felis, non efficitur arcu hendrerit nec. Phasellus eget lacus et mauris blandit
+    euismod sit amet vitae tellus. Suspendisse commodo tristique ullamcorper. Cras quis
+    cursus risus, viverra molestie ex. Suspendisse efficitur nec elit in accumsan. Phasellus
+    cursus metus at nisi dignissim facilisis. Nulla euismod pellentesque odio ut eleifend.
+    Praesent vitae tempor velit. Praesent sit amet vulputate nisi.
+  </section>
+</main>
 
-     </section>
-      -->
-      <main>
-        <section>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec aliquam massa. 
-          Cras quis augue fringilla, malesuada elit vel, tincidunt tortor. Aliquam tristique 
-          rhoncus felis, non efficitur arcu hendrerit nec. Phasellus eget lacus et mauris blandit 
-          euismod sit amet vitae tellus. Suspendisse commodo tristique ullamcorper. Cras quis 
-          cursus risus, viverra molestie ex. Suspendisse efficitur nec elit in accumsan. Phasellus 
-          cursus metus at nisi dignissim facilisis. Nulla euismod pellentesque odio ut eleifend. 
-          Praesent vitae tempor velit. Praesent sit amet vulputate nisi.
-        </section>
-      </main>
 
-      <aside>
-        <div class="row d-flex justify-content-center">
-          <div class="col-md-8 col-lg-6">
-            <div class="card shadow-0 border" style="background-color: #f0f2f5;">
-              <div class="card-body p-4">
-                <div class="form-outline mb-4">
-                  <input type="text" id="addANote" class="form-control" placeholder="Type comment..." />
-                  <label class="form-label" for="addANote">+ Add a note</label>
+<aside>
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-8 col-lg-6">
+      <div class="card shadow-0 border" style="background-color: #f0f2f5;">
+        <div class="card-body p-4">
+          <div class="form-outline mb-4">
+            <input type="text" id="addANote" class="form-control" placeholder="Type comment..." />
+            <label class="form-label" for="addANote">+ Add a comment</label>
+          </div>
+
+
+          <div class="card mb-4">
+            <div class="card-body">
+              <p>Hope you had fun, honey</p>
+
+
+              <div class="d-flex justify-content-between">
+                <div class="d-flex flex-row align-items-center">
+                  <img src="/images/kayla-farmer-Wh4CGblGImg-unsplash.jpg" alt="avatar" width="25" height="25" />
+                  <p class="small mb-0 ms-2">Denise</p>
                 </div>
-        
-                <div class="card mb-4">
-                  <div class="card-body">
-                    <p>Type your note, and hit enter to add it</p>
-        
-                    <div class="d-flex justify-content-between">
-                      <div class="d-flex flex-row align-items-center">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(4).webp" alt="avatar" width="25"
-                          height="25" />
-                        <p class="small mb-0 ms-2">Martha</p>
-                      </div>
-                      <div class="d-flex flex-row align-items-center">
-                        <p class="small text-muted mb-0">Upvote?</p>
-                        <i class="far fa-thumbs-up mx-2 fa-xs text-black" style="margin-top: -0.16rem;"></i>
-                        <p class="small text-muted mb-0">3</p>
-                      </div>
-                    </div>
-                  </div>
+                <div class="d-flex flex-row align-items-center">
+                  <p class="small text-muted mb-0">Upvote?</p>
+                  <i class="far fa-thumbs-up mx-2 fa-xs text-black" style="margin-top: -0.16rem;"></i>
+                  <p class="small text-muted mb-0">4</p>
                 </div>
-        
-                <div class="card mb-4">
-                  <div class="card-body">
-                    <p>Type your note, and hit enter to add it</p>
-        
-                    <div class="d-flex justify-content-between">
-                      <div class="d-flex flex-row align-items-center">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp" alt="avatar" width="25"
-                          height="25" />
-                        <p class="small mb-0 ms-2">Johny</p>
-                      </div>
-                      <div class="d-flex flex-row align-items-center">
-                        <p class="small text-muted mb-0">Upvote?</p>
-                        <i class="far fa-thumbs-up mx-2 fa-xs text-black" style="margin-top: -0.16rem;"></i>
-                        <p class="small text-muted mb-0">4</p>
-                      </div>
-                    </div>
-                  </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="card mb-4">
+            <div class="card-body">
+              <p>Beautiful! Looks like y'all had so much fun !!!</p>
+
+
+              <div class="d-flex justify-content-between">
+                <div class="d-flex flex-row align-items-center">
+                  <img src="/images/marina-piano-LIv3NEnZ3iI-unsplash.jpg" alt="avatar" width="25" height="25" />
+                  <p class="small mb-0 ms-2">Annie</p>
                 </div>
-        
-                <div class="card mb-4">
-                  <div class="card-body">
-                    <p>Type your note, and hit enter to add it</p>
-        
-                    <div class="d-flex justify-content-between">
-                      <div class="d-flex flex-row align-items-center">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(31).webp" alt="avatar" width="25"
-                          height="25" />
-                        <p class="small mb-0 ms-2">Mary Kate</p>
-                      </div>
-                      <div class="d-flex flex-row align-items-center text-primary">
-                        <p class="small mb-0">Upvoted</p>
-                        <i class="fas fa-thumbs-up mx-2 fa-xs" style="margin-top: -0.16rem;"></i>
-                        <p class="small mb-0">2</p>
-                      </div>
-                    </div>
-                  </div>
+                <div class="d-flex flex-row align-items-center text-primary">
+                  <p class="small mb-0">Upvoted</p>
+                  <i class="fas fa-thumbs-up mx-2 fa-xs" style="margin-top: -0.16rem;"></i>
+                  <p class="small mb-0">2</p>
                 </div>
-        
-                <div class="card">
-                  <div class="card-body">
-                    <p>Type your note, and hit enter to add it</p>
-        
-                    <div class="d-flex justify-content-between">
-                      <div class="d-flex flex-row align-items-center">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp" alt="avatar" width="25"
-                          height="25" />
-                        <p class="small mb-0 ms-2">Johny</p>
-                      </div>
-                      <div class="d-flex flex-row align-items-center">
-                        <p class="small text-muted mb-0">Upvote?</p>
-                        <i class="far fa-thumbs-up ms-2 fa-xs text-black" style="margin-top: -0.16rem;"></i>
-                      </div>
-                    </div>
-                  </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="card">
+            <div class="card-body">
+              <p>Nice pics bro</p>
+
+
+              <div class="d-flex justify-content-between">
+                <div class="d-flex flex-row align-items-center">
+                  <img src="/images/andrea-rico-yHhtT7-A1Xg-unsplash.jpg" alt="avatar" width="25" height="25" />
+                  <p class="small mb-0 ms-2">Joe</p>
+                </div>
+                <div class="d-flex flex-row align-items-center">
+                  <p class="small text-muted mb-0">Upvote?</p>
+                  <i class="far fa-thumbs-up ms-2 fa-xs text-black" style="margin-top: -0.16rem;"></i>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </aside>
-     </section> 
-     
-     -->
-    <!--map image -->
-     <div id="map"></div> 
-     
-      <section>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec aliquam massa. 
-        Cras quis augue fringilla, malesuada elit vel, tincidunt tortor. Aliquam tristique 
-        rhoncus felis, non efficitur arcu hendrerit nec. Phasellus eget lacus et mauris blandit 
-        euismod sit amet vitae tellus. Suspendisse commodo tristique ullamcorper. Cras quis 
-        cursus risus, viverra molestie ex. Suspendisse efficitur nec elit in accumsan. Phasellus 
-        cursus metus at nisi dignissim facilisis. Nulla euismod pellentesque odio ut eleifend. 
-        Praesent vitae tempor velit. Praesent sit amet vulputate nisi.
-      </section>
+      </div>
+    </div>
+  </div>
+</aside>
 
 
-      <footer>
-        <ul>
-            <li><a href="https://www.facebook.com/">Facebook</a></li>
-            <li><a href="https://twitter.com/">Twitter</a></li>
-            <li><a href="https://www.instagram.com/">Instagram</a></li>
-            <li><a href="https://www.tiktok.com/en/">Tiktok</a></li>
-        </ul>
-      </footer>
+<footer>
+  <ul>
+    <li><a href="https://www.facebook.com/">Facebook</a></li>
+    <li><a href="https://twitter.com/">Twitter</a></li>
+    <li><a href="https://www.instagram.com/">Instagram</a></li>
+    <li><a href="https://www.tiktok.com/en/">Tiktok</a></li>
+  </ul>
+</footer>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="loader.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.0/mdb.min.js"></script>
+<script src="/js/index.js"></script>
