added styling to the page. need to fix logout color

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,23 +1,31 @@
-header>
-<h3>Follow Blog</h3>
+<h3>My Trip</h3>
 </header>
-<!-- <section>
-         <div id="map"></div> 
-    </section>
-     -->
-
- 
 <main>
   <section>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec aliquam massa.
-    Cras quis augue fringilla, malesuada elit vel, tincidunt tortor. Aliquam tristique
-    rhoncus felis, non efficitur arcu hendrerit nec. Phasellus eget lacus et mauris blandit
-    euismod sit amet vitae tellus. Suspendisse commodo tristique ullamcorper. Cras quis
-    cursus risus, viverra molestie ex. Suspendisse efficitur nec elit in accumsan. Phasellus
-    cursus metus at nisi dignissim facilisis. Nulla euismod pellentesque odio ut eleifend.
-    Praesent vitae tempor velit. Praesent sit amet vulputate nisi.
+    The Bahamas: turquoise waters, white sands, vibrant culture. A slice of paradise that stole my heart.
+
+    Day 1: Nassau's Charm
+    Colonial architecture, pastel streets. Exuma Cays: swimming pigs at Big Major Cay.
+
+    Day 2: Atlantis Thrills
+    Paradise Island's Atlantis: water park slides, captivating marine life at the aquarium.
+
+    Day 3: Serene Out Islands
+    Harbour Island's pink sand beaches: tranquility found.
+
+    Day 4: Cultural Immersion
+    Junkanoo traditions, Nassau's vibrant straw markets. Connecting with locals.
+
+    Day 5: Farewell, Bahamas
+    Memories etched. Pristine beauty, warm hospitality. Yearning to return.
+
+    Conclusion:
+    The Bahamas: turquoise waters, warm sands, vibrant culture. Unforgettable escape.
+
   </section>
 </main>
+
+<a id="image-gallery" class="button" href="/image">Image Gallery</a>
 
 <aside>
   <div class="row d-flex justify-content-center">
@@ -105,6 +113,6 @@ header>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.0/mdb.min.js"></script>
 <script src="/js/index.js"></script>
-<script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script>
+{{!-- <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script> --}}
 <script src="js/loader.js"></script>
 
