--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,6 +151,26 @@ section {
   color: var(--white);
 }
 
+h3 {
+  color: var(--white);
+  padding: 20px;
+  margin-bottom: 0;
+}
+
+#image-gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button {
+  display: block;
+  margin: 0;
+  color: var(--white);
+  font-size: 30px;
+  margin-top: 20px;
+}
+
 footer {
   bottom: 0;
   width: 100%;
@@ -183,7 +203,6 @@ footer a:hover {
   color: var(--light-green);
 }
 
-
 /* Media query for larger screens */
 @media (min-width: 768px) {
   nav {
@@ -214,14 +233,13 @@ footer a:hover {
     width: auto;
   }
 
- 
   #map {
     height: 100%;
   }
-  html, body {
+  html,
+  body {
     height: 100%;
     margin: 0;
     padding: 0;
   }
-
 }
