added withAuth to all routes so users have to be logged in

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
       <form>
         <div class="form-group">
           <label for="blog">Add Blog</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+          <input type="text" class="form-control" id="inputBlog"
             placeholder="Name of Blog">
         </div>
         <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
