--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,8 @@
 body {
   display: flex;
   flex-direction: column;
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 100vh;
   margin: 0;
   padding: 0;
@@ -59,7 +61,7 @@ nav a:hover {
   border: none;
   background: none;
   padding: 0;
-  color: var(--dark-green);
+  color: var(--white);
   cursor: pointer;
   text-decoration: underline;
 }
@@ -69,7 +71,6 @@ nav a:hover {
 }
 
 .row {
-  /* width: 100%; */
   margin: 4rem;
   padding: 0;
   display: flex;
@@ -83,6 +84,10 @@ nav a:hover {
   padding: 20px;
   box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
+}
+
+h1 {
+  margin-left: 30px;
 }
 
 h2 {
@@ -128,10 +133,24 @@ h2 {
   text-transform: uppercase;
   font-weight: bold;
   width: 100%;
+  margin-left: 10px;
 }
 
 .btn-primary:hover {
   background-color: var(--mid-green);
+}
+
+#blogs ul {
+  border: 1px var(--white) solid;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  list-style: none;
+  margin: 20px;
+  padding: 30px;
 }
 
 /* post css */
