trying to figure out functions to populate blog

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -17,9 +17,9 @@
     
       <div id="blogs">
         <ul>
-          <li><a href="/trip/:id">Blog 1</li></a>
-          <li><a href="/trip/:id"></a>Blog 2</li></a>
-          <li><a href="/trip/:id"></a>Blog 3</li></a>
+          <li><a href="/blog/"/>Blog 1</li></a>
+          <li><a href="/blog/"></a>Blog 2</li></a>
+          <li><a href="/blog/"></a>Blog 3</li></a>
         </ul>
       </div>
   </div>
