--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,7 +1,7 @@
 <h3>My Trip</h3>
 </header>
 <main>
-  <section>
+  <section id="post-section">
     The Bahamas: turquoise waters, white sands, vibrant culture. A slice of paradise that stole my heart.
 
     Day 1: Nassau's Charm
