--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,26 +1,13 @@
-<h3>My Trip</h3>
+<h3>The Bahamas</h3>
 </header>
 <main>
   <section id="post-section">
-    The Bahamas: turquoise waters, white sands, vibrant culture. A slice of paradise that stole my heart.
+    <p>Translucent turqoise waters, white sands,  The Bahamas is a slice of paradise that would steal any heart.</p>
 
-    Day 1: Nassau's Charm
-    Colonial architecture, pastel streets. Exuma Cays: swimming pigs at Big Major Cay.
+   <p>Day 1: Journey to Atlantis 
+    With water park slides, a dazzling aquarium, a beachside bar, and more, Paradise Island's Atlantis has something for everyone.</p>
 
-    Day 2: Atlantis Thrills
-    Paradise Island's Atlantis: water park slides, captivating marine life at the aquarium.
-
-    Day 3: Serene Out Islands
-    Harbour Island's pink sand beaches: tranquility found.
-
-    Day 4: Cultural Immersion
-    Junkanoo traditions, Nassau's vibrant straw markets. Connecting with locals.
-
-    Day 5: Farewell, Bahamas
-    Memories etched. Pristine beauty, warm hospitality. Yearning to return.
-
-    Conclusion:
-    The Bahamas: turquoise waters, warm sands, vibrant culture. Unforgettable escape.
+    <p>Stay up to date for day two!</p>
 
   </section>
 </main>
@@ -114,5 +101,5 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.0/mdb.min.js"></script>
 <script src="/js/index.js"></script>
 {{!-- <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script> --}}
-<script src="js/loader.js"></script>
+{{!-- <script src="js/loader.js"></script> --}}
 
