accidentally messed up the routes but fixed it. DO NOT TOUCH BLOG ROUTE PLZ FOR THE LOVE OF GOD

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -17,7 +17,7 @@
     
       <div id="blogs">
         <ul id="blogList">
-          <li><a href="/blog/"/>The Bahamas</li></a>
+          <li><a href="/blog">The Bahamas</li></a>
         </ul>
       </div>
   </div>
