--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,18 +1,14 @@
-<h3>The Bahamas</h3>
-</header>
-<main>
-  <section id="post-section">
-    <p>Translucent turqoise waters, white sands,  The Bahamas is a slice of paradise that would steal any heart.</p>
+  <div class="card">
+  <h5>The Bahamas!!</h5>
+  <div class="card-body">
+    <h5 class="card-title">My visit with paradise</h5>
+    <p class="card-text">Day 1: Journey to Atlantis 
+      With water park slides, a dazzling aquarium, a beachside bar, and more, Paradise Island's Atlantis has something for everyone.</p>
 
-   <p>Day 1: Journey to Atlantis 
-    With water park slides, a dazzling aquarium, a beachside bar, and more, Paradise Island's Atlantis has something for everyone.</p>
-
-    <p>Stay up to date for day two!</p>
-
-  </section>
-</main>
-
-<a id="image-gallery" class="button" href="/image">Image Gallery</a>
+      <p>Stay up to date for day two!</p></p>
+    <a href="/image" class="btn-primary">Image Gallery</a>
+  </div>
+</div>
 
 <aside>
   <div class="row d-flex justify-content-center">
